minio/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: kws
spec:
  selector:
    app: minio
  ports:
    - port: 9000
      targetPort: 9000
      protocol: TCP
      name: controller
